updated styling - added audio - primitive script

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+@font-face{
+	font-family: duoline;
+	src: url('duoline.ttf');
+}
+
 #container{
 	width: 100%;
 	background: #fefdf0;
@@ -12,11 +17,13 @@ header{
 }
 
 h1{
-	font-family: Duo-Line;
+	font-family: DUO-LINE;
 	font-size: 100px;
 	color: #56300d;
 	letter-spacing: 1.5px;
 	text-align: center;
+	padding-top: 30px;
+	padding-bottom: 20px;
 
 }
 
@@ -35,7 +42,7 @@ h1{
 	height: 400px;
 	background: #fafbf3;
 	font-family: 'Lato', sans-serif;
-	margin-bottom: 200px;
+	margin-bottom: 100px;
 	outline: #038384 solid 5px;
 
 }
@@ -54,7 +61,31 @@ h1{
 	float: left;
 	height: 100%;
 	box-sizing: border-box;
-	background-image: src("assets/images/lighter.jpg");
+}
+
+#display-score{
+	width: 70%;
+	box-sizing: border-box;
+	height: 50%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 10%;
+	font-family: 'Lato', sans-serif;
+	color: #f05a28;
+	font-weight: bold;
+}
+
+#wins{
+	width: 100%;
+	height: 30%;
+	float: top;
+	box-sizing: border-box;
+}
+
+#losses{
+	width: 100%;
+	height: 30%;
+	box-sizing: border-box;
 }
 
 #play-box{
@@ -66,3 +97,49 @@ h1{
 	height: 100%;
 	box-sizing: border-box;
 }
+
+#instruction-box{
+	width: 100%;
+	box-sizing: border-box;
+	height: 25%;
+}
+
+#array-box{
+	width: 100%;
+	box-sizing: border-box;
+	height: 25%;
+}
+
+#remaining-guesses{
+	width: 100%;
+	box-sizing: border-box;
+	height: 25%;
+}
+
+#letters-guessed-box{
+	width: 100%;
+	box-sizing: border-box;
+	height: 25%;
+}
+
+
+#start-song{
+	background: #56300d;
+	font-family: DUO-LINE;
+	color: #fafbf3;
+	text-align: center;
+	width: 55%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 40%;
+	line-height: 20px;
+	border: 2px solid #acbf26;
+}
+
+#music-button{
+	position: relative;
+	bottom: -65%;
+}
+
+
+	
